# embedded_guru

./: .gitignore  FEATURE.md  GRAPH_SCHEMA.md  README.md  pyproject.toml
.github/workflows/: publish.yml
embedded_guru/: __init__.py  adder.py  cli.py  console.py  installer.py  paths.py  prefs.py  runner.py  scorecard.py
embedded_guru/data/: SKILL.md
embedded_guru/data/curriculum/concepts/: CAN.md  DMA.md  FreeRTOS.md  I2C.md  SPI.md  UART.md  watchdog.md
embedded_guru/data/curriculum/hardware/: boards.md
embedded_guru/data/curriculum/milestones/: Automotive.md  Industrial.md  IoT.md  Medical.md
embedded_guru/data/curriculum/mistakes/: common_mistakes.md
embedded_guru/data/curriculum/standards/: standards.md
