[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-guru"
version = "0.1.0"
description = "Firmware development mentor skill for Claude Code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["embedded", "firmware", "claude", "skill", "mentor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Software Development :: Embedded Systems",
]

[project.scripts]
embeddedguru = "embedded_guru.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["embedded_guru*"]

[tool.setuptools.package-data]
embedded_guru = ["data/SKILL.md", "data/references/**/*", "data/templates/**/*"]
